--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "git-commit-gen",
+  "name": "commit-wizard",
   "version": "1.1.0",
   "description": "CLI tool to generate Git commit messages",
   "bin": {
-    "git-commit-gen": "index.js"
+    "commit-wizard": "index.js"
   },
   "main": "index.js",
   "scripts": {
